microk8s/flexbench.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexbench
  labels:
    app: flexbench
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flexbench
  template:
    metadata:
      labels:
        app: flexbench
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
      - name: flexbench
        image: kanha13/flexbench
        ports:
        - containerPort: 4040
---
apiVersion: v1
kind: Service
metadata:
  name: flexbench-service
spec:
  selector:
    app: flexbench
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
      nodePort: 30000
